[package]
name = "mayara-signalk-wasm"
version = "0.5.0"
edition = "2021"
description = "Mayara Radar SignalK WASM plugin"
license = "MIT"
repository = "https://github.com/MarineYachtRadar/mayara-signalk-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Fetch mayara-core from main mayara repo at build time
mayara-core = { git = "https://github.com/MarineYachtRadar/mayara-server", tag = "v0.5.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
